feat: add recording soft delete
